# composite-actions

./: .gitignore  .release-please-manifest.json  Makefile  README.md  action_to_md.py  release-please-config.json  renovate.json  renovate.json5  replace_between.py
.claude-plugin/: plugin.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md  test_repository-dispatch.yml
build-gp-config/: action.yml  build_config.py  enrich_config.py  test_build_config.py
cached-apt-get-install/: action.yml
classify-stacks/: action.yml  classify-stacks.js
cloudfront-deploy/: README.md  action.yml
configure-aws-credentials/: action.yml
crane-copy-image/: README.md  action.yml
delete-release/: CHANGELOG.md  README.md  action.yml
detect-stale-job/: CHANGELOG.md  action.yml
determine-stacks/: CHANGELOG.md  Makefile  README.md  action.yml  determine_stacks.py  pyproject.toml  test_determine_stacks.py
determine-stacks/testdata/stacks/dev/app-custom/: main.tf
determine-stacks/testdata/stacks/dev/app-too-tikki/: main.tf
determine-stacks/testdata/stacks/dev/iam/: main.tf
determine-stacks/testdata/stacks/dev/my-custom-core-stack/: main.tf
determine-stacks/testdata/stacks/dev/networking/: main.tf
determine-stacks/testdata/stacks/prod/app-hello/: main.tf
determine-stacks/testdata/stacks/prod/app-too-tikki/: main.tf
determine-stacks/testdata/stacks/prod/applications/app-deep/: main.tf
determine-stacks/testdata/stacks/prod/dns/: main.tf
disallow-same-approver/: CHANGELOG.md  README.md  action.yml
docker-push/: action.yml
(+69 files in other folders)
